--- a/css/indexmain.css
+++ b/css/indexmain.css
@@ -14,6 +14,8 @@ body,ul,h1{
 .header{
     width:100%;
     height: 1.37rem;
+    box-shadow: 0px 0px 10px black;
+    position: relative;
 }
 .header-con{
     width:10.28rem;
