--- a/css/threemin.css
+++ b/css/threemin.css
@@ -12,12 +12,12 @@ body,ul,h1{
 }
 .header{
     width:100%;
-    height: 1.37rem;
+    height: 137px;
     box-shadow: 0px 0px 10px black;
     position: relative;
 }
 .header-con{
-    width:10.28rem;
+    width:1028px;
     height: 100%;
     margin: 0 auto;
 }
@@ -42,10 +42,10 @@ body,ul,h1{
 .nav li{
     height: 100%;
     float: left;
-    padding-left: 0.32rem;
-    padding-right: 0.32rem;
-    line-height: 1.37rem;
-    font-size: 0.20rem;
+    padding-left: 320px;
+    padding-right: 320px;
+    line-height: 137px;
+    font-size: 20px;
 }
 .nav a{
     text-decoration: none;
@@ -57,28 +57,29 @@ body,ul,h1{
 /*banner*/
 .banner{
     background: yellow;
-    height: 6.58rem;
+    height: 658px;
     position: relative;
 }
 .banner img{
     width: 100%;
-    height: 6.58rem;
+    height: 658px;
 }
 .banner-but{
-    width: 2rem;
-    height: 0.8rem;
-    border: 0.02rem solid #606568;
+    width: 200px;
+    height: 80px;
+    border: 2px solid #606568;
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
-    bottom: 0.75rem;
-    border-radius: 0.4rem;
-    font-size: 0.42rem;
+    bottom: 75px;
+    border-radius: 40px;
+    font-size: 42px;
     color: white;
-    line-height: 0.8rem;
+    line-height: 80px;
     text-align: center;
     cursor: pointer;
+    behavior: url(PIE.htc);
 }
 .banner-but:hover{
     background: rgba(255,255,255,0.3);
@@ -89,44 +90,44 @@ body,ul,h1{
 }
 .con-one{
     width:100%;
-    height: 7.28rem;
+    height: 728px;
     position: relative;
-    margin-top: 0.15rem;
+    margin-top: 15px;
 }
 .con-one img{
     width:100%;
     height: 100%;
 }
 .con-one-continer{
-    width:6.88rem;
-    height: 4.98rem;
+    width:688px;
+    height: 498px;
     position: absolute;
     background-image: url("../image/zz.png");
     top: 0;
     bottom: 0;
     margin: auto 0;
-    right:0.64rem;
+    right:64px;
 }
 .con-one-tit{
-    margin-bottom: 0.42rem;
+    margin-bottom: 42px;
     font-weight: bold;
 }
 .con-one-ct{
-    margin-bottom: 0.62rem;
+    margin-bottom: 62px;
 }
 .con-one-con{
-    width:5.78rem;
-    margin: 0.7rem auto;
-    height:1rem;
-    font-size: 0.16rem;
+    width:578px;
+    margin: 70px auto;
+    height:100px;
+    font-size: 16px;
 }
 .con-one-con p{
     margin: 0;
-    margin-bottom: 0.02rem;
+    margin-bottom: 2px;
 }
 /*内容第二块*/
 .con-two-continer{
-    width:11.80rem;
+    width:1180px;
     height: 100%;
     margin: 0 auto;
     position: absolute;
@@ -140,59 +141,60 @@ body,ul,h1{
     float: left;
 }
 .con-two-left{
-    width:6.29rem;
+    width:629px;
 }
 .con-two-left img{
-    width:6.43rem;
-    height: 4.22rem;
-    margin-top: 0.74rem;
+    width:643px;
+    height: 422px;
+    margin-top: 74px;
 }
- .con-two-left-c p{
-    font-size: 0.16rem;
-     margin: 0;
-     margin-bottom: 0.04rem;
+.con-two-left-c p{
+    font-size: 16px;
+    margin: 0;
+    margin-bottom: 4px;
 }
 .con-two-left-c .con-two-tit{
-    font-size: 0.18rem;
-    margin-bottom: 0.18rem;
+    font-size: 18px;
+    margin-bottom: 18px;
 }
 .con-two-right{
-    width:5.51rem;
+    width:551px;
 }
 .con-two-right .con-two-but{
-    border:0.02rem solid white;
-    height: 0.76rem;
-    padding-left: 0.38rem;
-    padding-right: 0.38rem;
-    font-size: 0.24rem;
+    border:2px solid white;
+    height: 76px;
+    padding-left: 38px;
+    padding-right: 38px;
+    font-size: 24px;
     color: white;
-    line-height: 0.76rem;
-    border-radius: 0.38rem;
+    line-height: 76px;
+    border-radius: 38px;
     cursor: pointer;
+    behavior: url(PIE.htc);
 }
 .con-two-right .con-two-but:hover{
     background: rgba(255,255,255,0.2);
 }
 .con-two-right .two-one{
-    margin-left: 0.81rem;
+    margin-left: 81px;
 }
 .con-two-right .two-two{
-    margin-left: 2.67rem;
+    margin-left: 267px;
 }
 .con-two-right .two-four{
-    margin-left: 3.31rem;
+    margin-left: 331px;
 }
 .con-two-right .two-five{
-    margin-left: 1.86rem;
+    margin-left: 186px;
 }
 .con-two-right li{
     overflow: hidden;
-    margin-top: 0.45rem;
+    margin-top: 45px;
 }
 /*中部内容*/
 .mid{
     width:100%;
-    height: 1.44rem;
+    height: 144px;
     position: relative;
 }
 .mid img{
@@ -201,13 +203,13 @@ body,ul,h1{
 }
 .mid p{
     position: absolute;
-    height: 1.44rem;
-    font-size: 0.18rem;
+    height: 144px;
+    font-size: 18px;
     color: #3FA7F3;
-    line-height: 1.44rem;
+    line-height: 144px;
     margin: 0;
     padding: 0;
-    padding-left: 1.14rem;
+    padding-left: 114px;
     top: 0;
 }
 /*country*/
@@ -218,30 +220,30 @@ body,ul,h1{
 .country-continer{
     /*width:10.16rem;*/
     /*1180*/
-    width:11.80rem;
+    width:1180px;
     margin: 0 auto;
-    padding-top: 1.34rem;
+    padding-top: 134px;
 }
 .contry-continer-t{
-     width: 100%;
-     font-size: 0.18rem;
- }
+    width: 100%;
+    font-size: 18px;
+}
 .contry-continer-t p{
     width: 100%;
-    font-size: 0.18rem;
+    font-size: 18px;
     margin: 0;
     font-weight: bold;
-    margin-bottom: 0.03rem;
+    margin-bottom: 3px;
 }
 .contry-continer-t .contry-continer-title{
     font-weight: normal;
-    margin-bottom: 0.14rem;
-    font-size: 0.20rem;
+    margin-bottom: 14px;
+    font-size: 20px;
 }
 .contry-continer-b{
-    width: 10.16rem;
+    width: 1016px;
     margin: 0 auto;
-    padding-top: 0.98rem;
+    padding-top: 98px;
 }
 .contry-continer-b ul{
     overflow: hidden;
@@ -249,17 +251,17 @@ body,ul,h1{
 }
 .contry-continer-b li{
     float: left;
-    margin-left: 0.6rem;
-    margin-right: 0.6rem;
-    width:1.34rem;
+    margin-left: 60px;
+    margin-right: 6px;
+    width:134px;
     text-align: center;
-    font-size: 0.16rem;
-    margin-bottom: 0.62rem;
+    font-size: 16px;
+    margin-bottom: 62px;
     font-weight: bold;
 }
 .contry-continer-b li img{
-    width:1.34rem;
-    height: 0.78rem;
+    width:134px;
+    height: 78px;
 }
 /*footer*/
 .footer{
@@ -267,27 +269,27 @@ body,ul,h1{
     background: #18211E;
 }
 .footer-con{
-    border-bottom: 0.02rem solid #B3B5B4;
+    border-bottom: 2px solid #B3B5B4;
     overflow: hidden;
-    padding-bottom: 0.52rem;
+    padding-bottom: 52px;
 }
 .footer-con-continer{
-    width:11.82rem;
+    width:1182px;
     margin: 0 auto;
     overflow: hidden;
-    padding-top: 0.90rem;
+    padding-top: 90px;
     box-sizing: border-box;
-    padding-left: 0.5rem;
+    padding-left: 50px;
 
 }
 .footer-con-l{
     float: left;
-    margin-right: 0.1rem;
+    margin-right: 10px;
     line-height: 0;
 }
 .footer-con-l img{
-    width:0.61rem;
-    height: 0.59rem;
+    width:61px;
+    height: 59px;
 }
 .footer-con-c{
     float: left;
@@ -304,60 +306,58 @@ body,ul,h1{
     color: white;
 }
 .footer-con-c .footer-title{
-    font-size: 0.16rem;
+    font-size: 16px;
     margin-top: 0;
-    margin-bottom: 0.34rem;
+    margin-bottom: 34px;
     box-sizing: border-box;
-    padding-left: 0.36rem;
+    padding-left: 36px;
 }
 .footer-con-c ul{
-    padding-right: 0.76rem;
-    padding-left: 0.36rem;
-    border-right: 0.01rem solid #EBECEB;
-    font-size: 0.14rem;
+    padding-right: 76px;
+    padding-left: 36px;
+    border-right: 1px solid #EBECEB;
+    font-size: 14px;
 }
 .af ul{
     border-right: 0px;
     padding-right: 0px;
 }
 .footer-con-c li{
-    margin-bottom: 0.17rem;
+    margin-bottom: 17px;
 }
 .footer-con-r{
     float: left;
     position: relative;
-    margin-left: 0.70rem;
+    margin-left: 70px;
 }
 .footer-con-r .phone{
     /*height: 0.88rem;*/
-    border:0.05rem solid #00B085;
-    border-radius: 0.48rem;
+    border:5px solid #00B085;
+    border-radius: 48px;
     color:#00AF84;
-    padding-left: 0.40rem;
-    padding-right: 0.40rem;
+    padding-left: 40px;
+    padding-right: 40px;
     position: relative;
-    padding-top: 0.15rem;
-    padding-bottom: 0.15rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
     behavior: url(PIE.htc);
     overflow: hidden;
-
-
 }
 .footer-con-r .phone p{
-    font-size: 0.18rem;
+    font-size: 18px;
     margin: 0;
     /*margin-top: 0.15rem;*/
     /*margin-bottom: 0.15rem;*/
 }
 .phone-dz{
-    padding-left: 0.20rem;
+    padding-left: 20px;
 }
 .phone-icon{
     position:absolute;
-    top:-0.70rem;
-    left: 0.3rem;
-    width:0.73rem;
-    height: 0.75rem;
+    top:-75px;
+    left: 3px;
+    width:73px;
+    height: 75px;
 }
 .phone-icon img{
     width: 100%;
@@ -367,13 +367,13 @@ body,ul,h1{
     width: 100%;
     background: #18211E;
     overflow: hidden;
-    padding-top: 0.20rem;
-    padding-bottom: 0.20rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .footer-ft p{
     text-align: center;
     color: #A7AAA9;
-    font-size: 0.12rem;
+    font-size: 12px;
 }
 
 
