--- a/css/aboutmin.css
+++ b/css/aboutmin.css
@@ -14,8 +14,11 @@ body,ul,h1{
 .header{
     width:100%;
     height: 137px;
-    box-shadow: 0px 0px 10px black;
+    /*box-shadow: 0px 0px 10px black;*/
     position: relative;
+    z-index: 3000;
+    background: url(../image/navbg.png);
+    behavior: url(PIE.htc);
 }
 .header-con{
     width:1028px;
