--- a/css/indexmain.css
+++ b/css/indexmain.css
@@ -1,6 +1,7 @@
 /*header*/
 body{
     overflow-x: hidden;
+    position: relative;
 }
 img{
     border-style: none;
@@ -13,8 +14,10 @@ body,ul,h1{
 .header{
     width:100%;
     height: 1.37rem;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px 0px #ccc;
     position: relative;
+    z-index: 3000;
+    background: url(../image/navbg.png);
 }
 .header-con{
     width:10.28rem;
