--- a/css/indexmain.css
+++ b/css/indexmain.css
@@ -11,74 +11,11 @@ body,ul,h1{
     margin: 0;
     list-style: none;
 }
-.header{
-    width:100%;
-    height: 1.37rem;
-    box-shadow: 0px 0px 10px 0px #ccc;
-    position: relative;
-    z-index: 3000;
-    background: url(../image/navbg.png);
-}
-.header-con{
-    width:10.28rem;
-    height: 100%;
-    margin: 0 auto;
-}
-.logo{
-    height: 100%;
-    width: 4.29%;
-    float: left;
-}
-.logo img{
-    width:100%
-}
-.nav{
-    float: right;
-    width:95.71%;
-    height: 100%;
-}
-.nav ul{
-    height: 100%;
-    float: right;
-    width:auto;
-}
-.nav li{
-    height: 100%;
-    float: left;
-    padding-left: 0.32rem;
-    padding-right: 0.32rem;
-    line-height: 1.37rem;
-    font-size: 0.20rem;
-    position: relative;
-}
-.twonav{
-    position: absolute;
-    width:2.4rem;
-    border-radius: 0.15rem;
-    background: rgba(255,255,255,0.8);
-    top: 0.9rem;
-    left:0rem;
-    z-index: 2000;
-    padding: 0.2rem;
-    display: none;
-}
-.twonav p{
-    margin: 0;
-    padding: 0;
-    line-height: 0.16rem;
-    margin-bottom: 0.15rem;
-}
-.nav a{
-    text-decoration: none;
-    color: black;
-}
-.nav a:hover{
-    color:#00C79F;
-}
+
 /*banner*/
 .banner{
     width:100%;
-    height: 6.84rem;
+    height: 6rem;
     position: relative;
 }
 .swiper-container{
@@ -245,32 +182,32 @@ body,ul,h1{
 }
 .con-int-img1{
     position: absolute;
-    top:-0.5rem;
-    right:-2rem;
+    top:-0.25rem;
+    right:-0.75rem;
     z-index: 1000;
 }
 .con-int-img1 img{
-    height: 5.7rem;
-    width:7.63rem;
+    height: 5rem;
+    width:6.1rem;
 }
 .con-int-img2{
     position: absolute;
-    top:-0.3rem;
-    left:-1rem;
+    top:0;
+    left:-0.5rem;
     z-index: 1000;
 }
 .con-int-img2 img{
-    width:5.24rem;
-    height: 5.57rem;
+    width:4.93rem;
+    height: 5rem;
 }
 .con-int-img3{
     position: absolute;
-    top:-0.5rem;
-    right:-1rem;
+    top:0rem;
+    right:-0.4rem;
 }
 .con-int-img3 img{
-    height: 5.66rem;
-    width:3.05rem;
+    height: 4.95rem;
+    width:2.7rem;
 }
 
 .c-i-cot-con-left{
@@ -288,12 +225,7 @@ body,ul,h1{
     /*background-size: cover;*/
     margin-top: 1.08rem;
 }
-.con-int-two{
 
-}
-.con-int-three{
-
-}
 /*footer*/
 .footer{
     width:100%;
