--- a/css/headfoot.css
+++ b/css/headfoot.css
@@ -1,13 +1,13 @@
 .header{
     width:100%;
-    height: 0.8rem;
+    height: 0.7rem;
     box-shadow: 0px 0px 10px 0px #ccc;
     position: relative;
     z-index: 3000;
     background: url(../image/navbg.png);
 }
 .header-con{
-    width:10.28rem;
+    width:9.6rem;
     height: 100%;
     margin: 0 auto;
 }
@@ -17,7 +17,8 @@
     float: left;
 }
 .logo img{
-    width:100%
+    width:100%;
+    margin-bottom: 0.1rem;
 }
 .nav{
     float: right;
@@ -34,8 +35,8 @@
     float: left;
     padding-left: 0.32rem;
     padding-right: 0.32rem;
-    line-height: 0.8rem;
-    font-size: 0.20rem;
+    line-height: 0.7rem;
+    font-size: 0.16rem;
     position: relative;
 }
 .twonav{
