--- a/css/headfootmin.css
+++ b/css/headfootmin.css
@@ -1,6 +1,6 @@
 .header{
     width:100%;
-    height: 80px;
+    height: 70px;
     box-shadow: 0px 0px 10px 0px #ccc;
     position: relative;
     z-index: 3000;
@@ -18,7 +18,8 @@
     float: left;
 }
 .logo img{
-    width:100%
+    width:100%;
+    margin-bottom: 10px;
 }
 .nav{
     float: right;
@@ -35,8 +36,8 @@
     float: left;
     padding-left: 32px;
     padding-right: 32px;
-    line-height: 80px;
-    font-size: 20px;
+    line-height: 70px;
+    font-size: 16px;
     position: relative;
 }
 .twonav{
