--- a/css/headfoot.css
+++ b/css/headfoot.css
@@ -16,9 +16,15 @@
     width: 4.29%;
     float: left;
 }
+.logo a{
+    display: block;
+    height: 100%;
+    width:100%;
+    text-decoration: none;
+    line-height: 0.45rem;
+}
 .logo img{
     width:100%;
-    margin-bottom: 0.1rem;
 }
 .nav{
     float: right;
