--- a/css/headfootmin.css
+++ b/css/headfootmin.css
@@ -17,9 +17,15 @@
     width: 4.29%;
     float: left;
 }
+.logo a{
+    display: block;
+    height: 100%;
+    width:100%;
+    background: yellow;
+}
 .logo img{
     width:100%;
-    margin-bottom: 10px;
+    vertical-align:middle;
 }
 .nav{
     float: right;
