--- a/css/headfootmin.css
+++ b/css/headfootmin.css
@@ -21,7 +21,7 @@
     display: block;
     height: 100%;
     width:100%;
-    background: yellow;
+    line-height: 45px;
 }
 .logo img{
     width:100%;
